--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-  <app-subscription></app-subscription>
+  <app-subscription *ngIf="!admin"></app-subscription>
+  <app-participants *ngIf="admin"></app-participants>
 
 
