--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -1,3 +1,24 @@
-<p>
-  participants works!
-</p>
+<mat-toolbar color="primary" class="fixed-header">
+  <img src="assets/icon.png" class="icone" alt="">
+  <h1>Tiago Matana Fotografia</h1>
+</mat-toolbar>
+<mat-accordion *ngIf="haveInscritos()">
+<mat-expansion-panel *ngFor="let inscricao of inscricoes">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        {{inscricao.nome}}
+      </mat-panel-title>
+      <mat-panel-description>
+        {{inscricao.telefone}}
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+      <p>
+        {{inscricao.motivo}}
+      </p>
+  </mat-expansion-panel>
+</mat-accordion>
+
+<br>
+<div fxLayout="row" fxLayoutAlign="center center">
+  <button (click)="getInscritos()" mat-raised-button color="primary" style="color:#fff;">Atualizar</button>
+</div>
